--- a/index.html
+++ b/index.html
@@ -377,28 +377,37 @@ Merci de nous soutenir en suivant les liens affilié pour l'Academie BTC. Contac
        <div class="form-group">
             <label>Nationalité</label>
             <select id="playerFlag">
-                <option value="🇧🇷">🇧🇷 Brésil</option>
-                <option value="🇦🇷">🇦🇷 Argentine</option>
-                <option value="🇫🇷">🇫🇷 France</option>
-                <option value="🇵🇹">🇵🇹 Portugal</option>
-                <option value="🇪🇸">🇪🇸 Espagne</option>
-                <option value="🇩🇪">🇩🇪 Allemagne</option>
-                <option value="🇮🇹">🇮🇹 Italie</option>
-                <option value="🏴󠁧󠁢󠁥󠁮󠁧󠁿">🏴󠁧󠁢󠁥󠁮󠁧󠁿 Angleterre</option>
-                <option value="🇨🇮">🇨🇮 Côte d'Ivoire</option>
-                <option value="🇭🇷">🇭🇷 Croatie</option>
-                <option value="🇳🇱">🇳🇱 Pays-Bas</option>
-                <option value="🇨🇦">🇨🇦 Canada</option>
-                <option value="🇯🇵">🇯🇵 Japon</option>
-                <option value="🇺🇾">🇺🇾 Uruguay</option>
-                <option value="🇧🇪">🇧🇪 Belgique</option>
-                <option value="🇲🇽">🇲🇽 Mexique</option>
-                <option value="🇨🇱">🇨🇱 Chili</option>
-                <option value="🇨🇴">🇨🇴 Colombie</option>
-                <option value="🇸🇪">🇸🇪 Suède</option>
-                <option value="🇩🇰">🇩🇰 Danemark</option>
-		<option value="🌍">🌍 Reste du monde</option>
-            </select>
+    <option value="🇧🇷">🇧🇷 Brésil</option>
+    <option value="🇦🇷">🇦🇷 Argentine</option>
+    <option value="🇫🇷">🇫🇷 France</option>
+    <option value="🇵🇹">🇵🇹 Portugal</option>
+    <option value="🇪🇸">🇪🇸 Espagne</option>
+    <option value="🇩🇪">🇩🇪 Allemagne</option>
+    <option value="🇮🇹">🇮🇹 Italie</option>
+    <option value="🏴󠁧󠁢󠁥󠁮󠁧󠁿">🏴󠁧󠁢󠁥󠁮󠁧󠁿 Angleterre</option>
+    <option value="🏴󠁧󠁢󠁷󠁬󠁳󠁿">🏴󠁧󠁢󠁷󠁬󠁳󠁿 Pays de Galles</option>
+    <option value="🏴󠁧󠁢󠁳󠁣󠁴󠁿">🏴󠁧󠁢󠁳󠁣󠁴󠁿 Écosse</option>
+    <option value="🇳🇱">🇳🇱 Pays-Bas</option>
+    <option value="🇧🇪">🇧🇪 Belgique</option>
+    <option value="🇺🇾">🇺🇾 Uruguay</option>
+    <option value="🇨🇴">🇨🇴 Colombie</option>
+    <option value="🇨🇱">🇨🇱 Chili</option>
+    <option value="🇲🇽">🇲🇽 Mexique</option>
+    <option value="🇳🇬">🇳🇬 Nigeria</option>
+    <option value="🇸🇳">🇸🇳 Sénégal</option>
+    <option value="🇪🇬">🇪🇬 Égypte</option>
+    <option value="🇩🇿">🇩🇿 Algérie</option>
+    <option value="🇲🇦">🇲🇦 Maroc</option>
+    <option value="🇰🇷">🇰🇷 Corée du Sud</option>
+    <option value="🇯🇵">🇯🇵 Japon</option>
+    <option value="🇺🇸">🇺🇸 États-Unis</option>
+    <option value="🇨🇮">🇨🇮 Côte d'Ivoire</option>
+    <option value="🇭🇷">🇭🇷 Croatie</option>
+    <option value="🇨🇦">🇨🇦 Canada</option>
+    <option value="🇸🇪">🇸🇪 Suède</option>
+    <option value="🇩🇰">🇩🇰 Danemark</option>
+    <option value="🌍">🌍 Reste du monde</option>
+</select>
         </div>
         <div class="form-group">
             <label>Club (optionnel)</label>
@@ -434,28 +443,37 @@ Merci de nous soutenir en suivant les liens affilié pour l'Academie BTC. Contac
         <div class="form-group">
             <label>Nationalité</label>
             <select id="coachFlag">
-                <option value="🇧🇷">🇧🇷 Brésil</option>
-                <option value="🇦🇷">🇦🇷 Argentine</option>
-                <option value="🇫🇷">🇫🇷 France</option>
-                <option value="🇵🇹">🇵🇹 Portugal</option>
-                <option value="🇪🇸">🇪🇸 Espagne</option>
-                <option value="🇩🇪">🇩🇪 Allemagne</option>
-                <option value="🇮🇹">🇮🇹 Italie</option>
-                <option value="🏴󠁧󠁢󠁥󠁮󠁧󠁿">🏴󠁧󠁢󠁥󠁮󠁧󠁿 Angleterre</option>
-                <option value="🇨🇮">🇨🇮 Côte d'Ivoire</option>
-                <option value="🇭🇷">🇭🇷 Croatie</option>
-                <option value="🇳🇱">🇳🇱 Pays-Bas</option>
-                <option value="🇨🇦">🇨🇦 Canada</option>
-                <option value="🇯🇵">🇯🇵 Japon</option>
-                <option value="🇺🇾">🇺🇾 Uruguay</option>
-                <option value="🇧🇪">🇧🇪 Belgique</option>
-                <option value="🇲🇽">🇲🇽 Mexique</option>
-                <option value="🇨🇱">🇨🇱 Chili</option>
-                <option value="🇨🇴">🇨🇴 Colombie</option>
-                <option value="🇸🇪">🇸🇪 Suède</option>
-                <option value="🇩🇰">🇩🇰 Danemark</option>
-		<option value="🌍">🌍 Reste du monde</option>
-            </select>
+    <option value="🇧🇷">🇧🇷 Brésil</option>
+    <option value="🇦🇷">🇦🇷 Argentine</option>
+    <option value="🇫🇷">🇫🇷 France</option>
+    <option value="🇵🇹">🇵🇹 Portugal</option>
+    <option value="🇪🇸">🇪🇸 Espagne</option>
+    <option value="🇩🇪">🇩🇪 Allemagne</option>
+    <option value="🇮🇹">🇮🇹 Italie</option>
+    <option value="🏴󠁧󠁢󠁥󠁮󠁧󠁿">🏴󠁧󠁢󠁥󠁮󠁧󠁿 Angleterre</option>
+    <option value="🏴󠁧󠁢󠁷󠁬󠁳󠁿">🏴󠁧󠁢󠁷󠁬󠁳󠁿 Pays de Galles</option>
+    <option value="🏴󠁧󠁢󠁳󠁣󠁴󠁿">🏴󠁧󠁢󠁳󠁣󠁴󠁿 Écosse</option>
+    <option value="🇳🇱">🇳🇱 Pays-Bas</option>
+    <option value="🇧🇪">🇧🇪 Belgique</option>
+    <option value="🇺🇾">🇺🇾 Uruguay</option>
+    <option value="🇨🇴">🇨🇴 Colombie</option>
+    <option value="🇨🇱">🇨🇱 Chili</option>
+    <option value="🇲🇽">🇲🇽 Mexique</option>
+    <option value="🇳🇬">🇳🇬 Nigeria</option>
+    <option value="🇸🇳">🇸🇳 Sénégal</option>
+    <option value="🇪🇬">🇪🇬 Égypte</option>
+    <option value="🇩🇿">🇩🇿 Algérie</option>
+    <option value="🇲🇦">🇲🇦 Maroc</option>
+    <option value="🇰🇷">🇰🇷 Corée du Sud</option>
+    <option value="🇯🇵">🇯🇵 Japon</option>
+    <option value="🇺🇸">🇺🇸 États-Unis</option>
+    <option value="🇨🇮">🇨🇮 Côte d'Ivoire</option>
+    <option value="🇭🇷">🇭🇷 Croatie</option>
+    <option value="🇨🇦">🇨🇦 Canada</option>
+    <option value="🇸🇪">🇸🇪 Suède</option>
+    <option value="🇩🇰">🇩🇰 Danemark</option>
+    <option value="🌍">🌍 Reste du monde</option>
+</select>
         </div>
         <button class="btn" style="width:100%;" onclick="saveCoach()">✅ Valider</button>
     </div>
@@ -562,6 +580,7 @@ const playersDatabase = [
     { name: 'Laurent Blanc', flag: '🇫🇷', club: 'Manchester United' },
     { name: 'Fabien Barthez', flag: '🇫🇷', club: 'Manchester United' },
     { name: 'Robert Pirès', flag: '🇫🇷', club: 'Arsenal' },
+    { name: 'Eric Cantona', flag: '🇫🇷', club: 'Manchester United' },
     { name: 'Karim Benzema', flag: '🇫🇷', club: 'Al Ittihad' },
     { name: 'Franck Ribéry', flag: '🇫🇷', club: 'Bayern Munich' },
     { name: 'Blaise Matuidi', flag: '🇫🇷', club: 'Juventus' },
@@ -639,6 +658,18 @@ const playersDatabase = [
     { name: 'Jordi Alba', flag: '🇪🇸', club: 'Barcelona' },
     { name: 'Pedro Rodríguez', flag: '🇪🇸', club: 'Chelsea' },
     { name: 'Juan Mata', flag: '🇪🇸', club: 'Manchester United' },
+
+    // === PAYS DE GALLES ===
+    { name: 'Gareth Bale', flag: '🏴󠁧󠁢󠁷󠁬󠁳󠁿', club: 'Real Madrid' },
+    { name: 'Ryan Giggs', flag: '🏴󠁧󠁢󠁷󠁬󠁳󠁿', club: 'Manchester United' },
+    { name: 'Ian Rush', flag: '🏴󠁧󠁢󠁷󠁬󠁳󠁿', club: 'Liverpool' },
+    { name: 'Aaron Ramsey', flag: '🏴󠁧󠁢󠁷󠁬󠁳󠁿', club: 'Juventus' },
+
+    // === ÉCOSSE ===
+    { name: 'Kenny Dalglish', flag: '🏴󠁧󠁢󠁳󠁣󠁴󠁿', club: 'Liverpool' },
+    { name: 'Denis Law', flag: '🏴󠁧󠁢󠁳󠁣󠁴󠁿', club: 'Manchester United' },
+    { name: 'Andy Robertson', flag: '🏴󠁧󠁢󠁳󠁣󠁴󠁿', club: 'Liverpool' },
+    { name: 'Billy Bremner', flag: '🏴󠁧󠁢󠁳󠁣󠁴󠁿', club: 'Leeds United' },
     
     // CHAMPIONS D'EUROPE - ANGLETERRE (Ligue des Champions)
     { name: 'Bobby Charlton', flag: '🏴', club: 'Manchester United' },
