--- a/index.html
+++ b/index.html
@@ -1078,12 +1078,11 @@ function exportAsImage() {
             </style>
         </head>
         <body>
-            <h1>⚽ Mon Eleven de Légende</h1>
+            <h1>Fait ta capture d'ecran</h1>
             <div class="image-container">
                 <img id="exportedImage" src="" alt="Mon équipe" />
             </div>
-            <button onclick="downloadImage()">⬇️ Télécharger l’image</button>
-
+            
             <script>
                 function downloadImage() {
                     const img = document.getElementById('exportedImage');
