--- a/index.html
+++ b/index.html
@@ -299,6 +299,24 @@ h1 { font-size: 2.5em; text-shadow: 2px 2px 4px rgba(0,0,0,0.3); margin-bottom: 
 </head>
 <body>
 <div class="container">
+    <footer style="
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0,0,0,0.8);
+    backdrop-filter: blur(10px);
+    text-align: center;
+    padding: 12px;
+    font-size: 13px;
+    color: #fff;
+    z-index: 100;
+    border-top: 1px solid rgba(255,255,255,0.2);
+    ">
+    <strong>Eleven Squad Builder ⚽</strong><br>
+    © 2025-2026 - Créé par un passionné de football<br>
+    <small>Application communautaire gratuite • Données à titre indicatif • Pas d'affiliation officielle mais personnel dans le but d'apprendre les bases de Bitcoin.</small>
+    </footer>
     <header>
         <h1>⚽ Eleven Squad Builder</h1>
         <p>Créez votre équipe de rêve - Toutes époques confondues. 
